k8s/noexit_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noexit-deployment
  namespace: e1i3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noexit
  template:
    metadata:
      labels:
        app: noexit
    spec:
      containers:
        - name: noexit
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/noexit:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.2"
              memory: "250Mi"
