k8s/noexit_service.yml
apiVersion: v1
kind: Service
metadata:
  name: noexit-service
  namespace: e1i3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: noexit
