k8s/noexit_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noexit-ingress
  namespace: e1i3
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.noexxit.store"
      secretName: noexit-com-tls
  rules:
    - host: server.noexxit.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noexit-service
                port:
                  number: 80
